# recom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: recom.cpp  stripper.cpp
test/: input.test  tests.cpp
